@@ -515,6 +515,14 @@
 #
 ##########################################################################################################
 #
+## IPMI_System_Firmware_Progress_State
+#
+# IPMI_System_Firmware_Progress_State_No_Event       Nominal
+# IPMI_System_Firmware_Progress_State_Deasserted     Nominal
+# IPMI_System_Firmware_Progress_State_Asserted       Warning
+#
+##########################################################################################################
+#
 ## IPMI_System_Firmware_Progress_Device_Present
 #
 # IPMI_System_Firmware_Progress_Device_Present_Device_No_Event                Nominal
