@@ -167,6 +167,7 @@ struct ipmi_interpret_sel {
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_drive_slot_device_present_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_post_memory_resize_state_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_system_firmware_progress_config;
+  struct ipmi_interpret_sel_config **ipmi_interpret_sel_system_firmware_progress_state_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_system_firmware_progress_device_present_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_system_firmware_progress_transition_severity_config;
   struct ipmi_interpret_sel_config **ipmi_interpret_sel_event_logging_disabled_config;
@@ -266,6 +267,7 @@ struct ipmi_interpret_sensor {
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_drive_slot_device_present_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_post_memory_resize_state_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_system_firmware_progress_config;
+  struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_system_firmware_progress_state_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_system_firmware_progress_device_present_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_system_firmware_progress_transition_severity_config;
   struct ipmi_interpret_sensor_config **ipmi_interpret_sensor_event_logging_disabled_config;
